Migrate discard, library-search, and exile-from-hand carry-over state onto interaction records (stage 6, batches 4-6)
Remove 12 more per-mechanic pending* fields from GameData:

- New DiscardFollowUp record carried on DiscardChoice: rummage draw count,
  untap-after-discard permanent, and the each-player-discard APNAP queue
  trio all ride the fresh-record-per-pick re-begins.
- New LibrarySearchFollowUp record carried in LibrarySearchParams:
  Cultivate/Final Parting second picks, the each-player basic-land-search
  queue (Field of Ruin / Old-Growth Dryads), the Distant Memories
  opponent-exile prompt, and the imprint source permanent.
- ExileFromHandChoice gained a playPermissionControllerId component
  (Fiend of the Shadows).

Closes pre-existing simulationCopy gaps: pendingRummageDrawCount,
pendingUntapAfterDiscardPermanentId, and the two library-search booleans
were never copied; carried on interaction records they now copy with the
queue. pendingGraveyardReturnQueue deliberately stays global (its
continuation must survive interleaved graveyard choices) — documented in
REFACTOR-NOTES.md, which now marks stage 6 complete.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>